# backend

./: .env.example  Procfile  config.py  constants.py  logger.py  main.py  pyproject.toml  readme.md  requirements.txt
api/discourse/: get_topic_content.py  main.py  topic_row.py
api/routes/: __init__.py  base.py  chat.py  refresh.py
lib/pinecone/: ingest.py  search.py
