[tool.poetry]
name = "backend"
version = "0.1.0"
description = "0u0 Python backend"
authors = ["0xpetra <franco.petraz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.11"
fastapi = "0.95.0"
gensim = "^4.3.1"
nltk = "3.8.1"
numpy = "1.23.5"
pandas = "1.5.3"
pydantic = {version = "1.10.5", extras = ["dotenv"]}
python-multipart = "0.0.6"
uvicorn = "0.21.1"
langchain = "^0.0.146"
sentence-transformers = "^2.2.2"
openai = "^0.27.4"
httpx = "^0.24.0"
asyncio = "^3.4.3"
pinecone-client = "^2.2.1"
tiktoken = "^0.3.3"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
